2013-04-28  Paul Smith  <psmith@gnu.org>

	Implement a "per-job" output synchronization option.

	* main.c (decode_output_sync_flags): Recognize the new option.
	* makeint.h (OUTPUT_SYNC_JOB): Add new values for "job"
	* job.c (assign_child_tempfiles): In per-job mode, truncate the
	temp file for re-use by the next job.
	(sync_output): Don't close the temp files as we may still use them.
	(free_child): Close the temp files here as we definitely don't
	need them.
	(new_job): In per-job output mode, sync_output() after each job.
	* job.h (struct child): Avoid ifdefs.
	* make.1: Add new options to the man page.
	* doc/make.texi (Parallel Output): Break documentation on input
	and output into separate sections for readability.  Document the
	new "job" and "none" modes.

2013-04-27  Paul Smith  <psmith@gnu.org>

	* job.c (construct_command_argv_internal): Fix oneshell support
	for non-POSIX-sh shells.

	* load.c (load_object): Extract all POSIX-isms into a separate
	function for portability.
	(load_file): Check the .LOADED variable first and don't invoke
	load_object() if it's already been loaded.

2013-04-27  Eli Zaretskii  <eliz@gnu.org>

	* read.c (record_files): Pay attention to .ONESHELL in MS-Windows.

	* job.c (construct_command_argv_internal): Support .ONESHELL on
	MS-Windows, when the shell is not a Unixy shell.

2013-04-27  Eli Zaretskii  <eliz@gnu.org>

	* job.c: Fix compilation error on GNU/Linux due to "label at end
	of compound statement".

2013-04-27  Frank Heckenbach <f.heckenbach@fh-soft.de>  (tiny change)

	* job.c (sync_output): Don't discard the output if
	acquire_semaphore fails; instead, dump the output unsynchronized.

2013-04-27  Eli Zaretskii  <eliz@gnu.org>

	Support --output-sync on MS-Windows.
	* w32/compat/posixfcn.c: New file, with emulations of Posix
	functions and Posix functionality for MS-Windows.

	* w32/subproc/sub_proc.c: Include io.h.
	(process_noinherit): New function, forces a file descriptor to not