@@ -75,9 +75,6 @@ this program.  If not, see <http://www.gnu.org/licenses/>.  */
 /* Define to 1 if you have <alloca.h> and it should be used (not on Ultrix).  */
 /* #undef HAVE_ALLOCA_H */
 
-/* Define to 1 if you don't have vprintf but do have _doprnt.  */
-/* #undef HAVE_DOPRNT */
-
 /* Define to 1 if you have the fdopen function.  */
 #define HAVE_FDOPEN 1
 
@@ -143,9 +140,6 @@ this program.  If not, see <http://www.gnu.org/licenses/>.  */
 
 /* Define to 1 if you have <vfork.h>.  */
 /* #undef HAVE_VFORK_H */
-
-/* Define to 1 if you have the vprintf function.  */
-#define HAVE_VPRINTF 1
 
 /* Define to 1 if you have the wait3 system call.  */
 /* #undef HAVE_WAIT3 */
@@ -338,9 +332,6 @@ this program.  If not, see <http://www.gnu.org/licenses/>.  */
 
 /* Define to 1 if your compiler conforms to the ANSI C standard. */
 #define HAVE_ANSI_COMPILER 1
-
-/* Define to 1 if you have the <stdarg.h> header file. */
-#define HAVE_STDARG_H 1
 
 /* Define to 1 if you have the <stdlib.h> header file.  */
 #define HAVE_STDLIB_H 1
