@@ -109,9 +109,6 @@ this program.  If not, see <http://www.gnu.org/licenses/>.  */
 # define HAVE_DIRECT_H 1
 #endif
 
-/* Define to 1 if you don't have 'vprintf' but do have '_doprnt.' */
-/* #undef HAVE_DOPRNT */
-
 /* Use platform specific coding */
 #define HAVE_DOS_PATHS 1
 
@@ -247,9 +244,6 @@ this program.  If not, see <http://www.gnu.org/licenses/>.  */
 /* Define to 1 if you have the 'socket' function. */
 /* #undef HAVE_SOCKET */
 
-/* Define to 1 if you have the <stdarg.h> header file. */
-#define HAVE_STDARG_H 1
-
 /* Define to 1 if you have the <stdint.h> header file. */
 #ifdef __MINGW32__
 #define HAVE_STDINT_H 1
@@ -348,18 +342,11 @@ this program.  If not, see <http://www.gnu.org/licenses/>.  */
 #define HAVE_UNISTD_H 1
 #endif
 
-/* Define to 1 if you have the <varargs.h> header file. */
-/* #undef HAVE_VARARGS_H */
-
 /* Define to 1 if you have the 'vfork' function. */
 /* #undef HAVE_VFORK */
 
 /* Define to 1 if you have the <vfork.h> header file. */
 /* #undef HAVE_VFORK_H */
-
-/* Define to 1 if you have the 'vprintf' function. */
-#define HAVE_VPRINTF 1
-
 
 /* Define to 1 if you have the 'wait3' function. */
 /* #undef HAVE_WAIT3 */
